@@ -131,6 +131,21 @@ namespace OpenRCT2::Scripting
             return GameIsPaused();
         }
 
+        void paused_set(const bool& value)
+        {
+#    ifndef DISABLE_NETWORK
+            if (NetworkGetMode() != NETWORK_MODE_NONE)
+            {
+                auto ctx = GetContext()->GetScriptEngine().GetContext();
+                duk_error(
+                    ctx, DUK_ERR_ERROR, "Setting paused state is not network safe. Use the pausetoggle game action instead.");
+                return;
+            }
+#    endif
+            if (value != GameIsPaused())
+                PauseToggle();
+        }
+
         void captureImage(const DukValue& options)
         {
             auto ctx = GetContext()->GetScriptEngine().GetContext();
@@ -438,7 +453,7 @@ namespace OpenRCT2::Scripting
             dukglue_register_property(ctx, &ScContext::sharedStorage_get, nullptr, "sharedStorage");
             dukglue_register_method(ctx, &ScContext::getParkStorage, "getParkStorage");
             dukglue_register_property(ctx, &ScContext::mode_get, nullptr, "mode");
-            dukglue_register_property(ctx, &ScContext::paused_get, nullptr, "paused");
+            dukglue_register_property(ctx, &ScContext::paused_get, &ScContext::paused_set, "paused");
             dukglue_register_method(ctx, &ScContext::captureImage, "captureImage");
             dukglue_register_method(ctx, &ScContext::getObject, "getObject");
             dukglue_register_method(ctx, &ScContext::getAllObjects, "getAllObjects");
